Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/Quiz_Question__c.object-meta.xml
<CustomObject>
    <description>Object which store the questions</description>
    <label>Quiz Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Quiz Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>