Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/fields/Currect_Answer__c.field-meta.xml
<CustomField>
    <fullName>Currect_Answer__c</fullName>
    <label>Correct Answer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
            <value>
                <fullName>Option 3</fullName>
            </value>
            <value>
                <fullName>Option 4</fullName>
            </value>
            <value>
                <fullName>Option 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>