Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/fields/Option_2__c.field-meta.xml
<CustomField>
    <fullName>Option_2__c</fullName>
    <label>Option 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>