Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/fields/Option_3__c.field-meta.xml
<CustomField>
    <fullName>Option_3__c</fullName>
    <label>Option 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>