Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/fields/Question_Description__c.field-meta.xml
<CustomField>
    <fullName>Question_Description__c</fullName>
    <description>Question for the quiz</description>
    <label>Question Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>