Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/fields/Quiz_Month__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Month__c</fullName>
    <label>Quiz Month</label>
    <type>Date</type>
</CustomField>