Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/recordTypes/Agriculture_Junior.recordType-meta.xml
<RecordType>
    <fullName>Agriculture_Junior</fullName>
    <active>true</active>
    <description>Quiz Question for Agriculture Junior catagory</description>
    <label>Agriculture Junior</label>
</RecordType>