Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/recordTypes/Agriculture_Senior.recordType-meta.xml
<RecordType>
    <fullName>Agriculture_Senior</fullName>
    <active>true</active>
    <description>Quiz Question for Agriculture Senior catagory</description>
    <label>Agriculture Senior</label>
</RecordType>