Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/recordTypes/Plumbing_Junior.recordType-meta.xml
<RecordType>
    <fullName>Plumbing_Junior</fullName>
    <active>true</active>
    <description>Quiz Question for Plumbing Junior catagory</description>
    <label>Plumbing Junior</label>
</RecordType>