Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/recordTypes/Plumbing_Senior.recordType-meta.xml
<RecordType>
    <fullName>Plumbing_Senior</fullName>
    <active>true</active>
    <description>Quiz Question for Plumbing Senior catagory</description>
    <label>Plumbing Senior</label>
</RecordType>