Partial_14Dec2021/force-app/main/default/objects/Quiz_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Description__c</columns>
    <columns>Currect_Answer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>isActive__c</columns>
    <columns>Quiz_Month__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>